--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.4",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "socket.io": "~1.3.7"
   }
 }
